--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -1,7 +1,25 @@
 // 鼠标样式
-  * {
-      cursor: url(/images/mouse_cursor.ico),auto!important
-  }
-  :active {
-      cursor: url(/images/mouse_pend.ico),auto!important
-  }
+* {
+ cursor: url(/images/mouse_cursor.ico),auto!important
+}
+:active {
+ cursor: url(/images/mouse_pend.ico),auto!important
+}
+
+// background image setting
+body {
+  background-image:url(/images/bkg.jpeg);
+  background-repeat: no-repeat;
+  background-attachment:fixed;
+  background-position:50% 50%;
+  background-size: cover; // 80% 100%;
+}
+
+// 主文章区域的背景及透明效果
+.main-inner { 
+  margin-top: 60px;
+  padding: 60px 60px 60px 60px;
+  background: #333;
+  opacity: 0.85;
+  min-height: 500px;
+}
