--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -23,3 +23,49 @@ body {
   opacity: 0.85;
   min-height: 500px;
 }
+
+
+// 页面头部背景，空出透明，不加图片
+.header { 
+  background:url();
+}
+
+// 菜单图表链接 以及 超链接样式
+a {
+  color: #0684bd;
+}
+// 鼠标选中时颜色
+a:hover {
+  color: #48d1cc;
+}
+
+// 菜单字体大小
+.menu .menu-item a {
+  font-size: 14px;
+}
+
+
+// 头部inner
+.header-inner {
+  // up, right, down, left
+  padding: 20px 0px 20px 0px;
+  width: 800px;
+}
+
+// 顶部标题设置
+.site-title {
+  color: #ffffff;
+  display: inline-block;
+  font-size: 2.375em;
+  font-weight: normal;
+  line-height: 1.5;
+  vertical-align: top;
+}
+
+// 引用块区域显示设置
+blockquote {
+    border-left: 4px solid #ddd;
+    color: #42ae7e;
+    margin: 0;
+    padding: 0 15px;
+}
