--- a/source/_data/variables.styl
+++ b/source/_data/variables.styl
@@ -27,7 +27,7 @@ $orange       = #fc6423;
 // Settings for some of the most global styles.
 // --------------------------------------------------
 // Global text color on <body>
-$text-color                   = whitesmoke;
+$text-color                   = $whitesmoke;
 
 // Global link color.
 $link-color                   = $black-light;
