fix toc and update color for footer

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -69,3 +69,10 @@ blockquote {
     margin: 0;
     padding: 0 15px;
 }
+
+// 底部copyright标示栏设置
+.footer {
+    background: #333;
+    color: #ecc156;
+    padding: 10px 0;
+}
