change title color of posts

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -76,3 +76,12 @@ blockquote {
     color: #ecc156;
     padding: 10px 0;
 }
+
+// post标题设置
+.posts-expand .post-title-link {
+    border-bottom: none;
+    color: #b9a68c;
+    display: inline-block;
+    position: relative;
+    vertical-align: top;
+}
