--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -92,3 +92,13 @@ pre {
     font-family: monospace, monospace;
     font-size: 0.8em;
 }
+
+// 版权区域设置
+.post-copyright {
+    margin: 2em 0 0;
+    padding: 0.5em 1em;
+    border-left: 3px solid #ec1e1e;
+    background-color: #555;
+    list-style: none;
+    font-size: .8em;
+}
